--- a/Parcial1_Fernando_Manzanares.tex
+++ b/Parcial1_Fernando_Manzanares.tex
@@ -24,7 +24,7 @@ Fernando Ernesto Manzanares Morán
 
 \item [2.] ¿Cuál el el nombre y número de la versión de R actual, la anterior a la actual y la posterior a la actual y cual es el periodo de tiempo que tiene CRAN para liberar una nueva versión?
 
-\subitem La versión actual es la 3.2.2 (fire safety) la anterior 3.2.1 y la posterior a la actual es la 3.1.3 (smooth sidewalk)
+\subitem La versión actual es la 3.2.2 (fire safety),la anterior 3.2.1 y la posterior es la 3.1.3 (smooth sidewalk) para liberar una version creo que son 6 meses.
 
 \item [3.] Explique la lógica de como cambian los números de las versiones de R.
 \subitem La Version compuesta por tres mumeros por ejemplo 3.x.y donde "x" representa los cambios grandes en la version de R y "y" los cambios que pueden hacerse en la version pero cuando estos son minimos, por ejemplo cuando se agregan nuevos paquetes o se actualizan estos.
